--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
 body {
-    font-family: 'Cairo', 'Poppins', sans-serif;
+    font-family: 'Poppins', 'Inter', sans-serif;
     color: var(--text-color);
     line-height: 1.8;
     overflow-x: hidden;
@@ -252,11 +252,21 @@ h1, h2, h3, h4, h5, h6 {
     from { width: 0; }
 }
 
-.progress-bar-95 { width: 95%; }
-.progress-bar-90 { width: 90%; }
-.progress-bar-88 { width: 88%; }
-.progress-bar-85 { width: 85%; }
+/* Progress Bars - All Percentages */
+.progress-bar-10 { width: 10%; }
+.progress-bar-20 { width: 20%; }
+.progress-bar-30 { width: 30%; }
+.progress-bar-40 { width: 40%; }
+.progress-bar-50 { width: 50%; }
+.progress-bar-60 { width: 60%; }
+.progress-bar-70 { width: 70%; }
+.progress-bar-75 { width: 75%; }
 .progress-bar-80 { width: 80%; }
+.progress-bar-85 { width: 85%; }
+.progress-bar-88 { width: 88%; }
+.progress-bar-90 { width: 90%; }
+.progress-bar-95 { width: 95%; }
+.progress-bar-100 { width: 100%; }
 
 /* ===== Service Cards ===== */
 .service-card {
